@@ -66,67 +66,67 @@
    "provides" : {
       "File::DataClass" : {
          "file" : "lib/File/DataClass.pm",
-         "version" : "v0.42.1"
+         "version" : "v0.42.2"
       },
       "File::DataClass::Cache" : {
          "file" : "lib/File/DataClass/Cache.pm",
-         "version" : "v0.42.1"
+         "version" : "v0.42.2"
       },
       "File::DataClass::Constants" : {
          "file" : "lib/File/DataClass/Constants.pm",
-         "version" : "v0.42.1"
+         "version" : "v0.42.2"
       },
       "File::DataClass::Exception" : {
          "file" : "lib/File/DataClass/Exception.pm",
-         "version" : "v0.42.1"
+         "version" : "v0.42.2"
       },
       "File::DataClass::Functions" : {
          "file" : "lib/File/DataClass/Functions.pm",
-         "version" : "v0.42.1"
+         "version" : "v0.42.2"
       },
       "File::DataClass::HashMerge" : {
          "file" : "lib/File/DataClass/HashMerge.pm",
-         "version" : "v0.42.1"
+         "version" : "v0.42.2"
       },
       "File::DataClass::IO" : {
          "file" : "lib/File/DataClass/IO.pm",
-         "version" : "v0.42.1"
+         "version" : "v0.42.2"
       },
       "File::DataClass::List" : {
          "file" : "lib/File/DataClass/List.pm",
-         "version" : "v0.42.1"
+         "version" : "v0.42.2"
       },
       "File::DataClass::Result" : {
          "file" : "lib/File/DataClass/Result.pm",
-         "version" : "v0.42.1"
+         "version" : "v0.42.2"
       },
       "File::DataClass::ResultSet" : {
          "file" : "lib/File/DataClass/ResultSet.pm",
-         "version" : "v0.42.1"
+         "version" : "v0.42.2"
       },
       "File::DataClass::ResultSource" : {
          "file" : "lib/File/DataClass/ResultSource.pm",
-         "version" : "v0.42.1"
+         "version" : "v0.42.2"
       },
       "File::DataClass::Schema" : {
          "file" : "lib/File/DataClass/Schema.pm",
-         "version" : "v0.42.1"
+         "version" : "v0.42.2"
       },
       "File::DataClass::Storage" : {
          "file" : "lib/File/DataClass/Storage.pm",
-         "version" : "v0.42.1"
+         "version" : "v0.42.2"
       },
       "File::DataClass::Storage::Any" : {
          "file" : "lib/File/DataClass/Storage/Any.pm",
-         "version" : "v0.42.1"
+         "version" : "v0.42.2"
       },
       "File::DataClass::Storage::JSON" : {
          "file" : "lib/File/DataClass/Storage/JSON.pm",
-         "version" : "v0.42.1"
+         "version" : "v0.42.2"
       },
       "File::DataClass::Types" : {
          "file" : "lib/File/DataClass/Types.pm",
-         "version" : "v0.42.1"
+         "version" : "v0.42.2"
       }
    },
    "release_status" : "stable",
@@ -140,6 +140,6 @@
          "http://dev.perl.org/licenses/"
       ]
    },
-   "version" : "0.42.1"
+   "version" : "0.42.2"
 }
 
