@@ -4,7 +4,7 @@ Name
 
 Version
 
-    This document describes version v0.42.$Rev: 1 $ of File::DataClass
+    This document describes version v0.42.$Rev: 2 $ of File::DataClass
 
 Synopsis
 
