@@ -15,13 +15,13 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 95b7b9e92de13ce8ad9af8a2907cbbaee8ecc555 Build.PL
-SHA1 340d904764e4cfe9f5152affe219eb6faee34ec3 Changes
+SHA1 243286f1246099580549cb124e9659c503bdc479 Changes
 SHA1 b8415dc6fd6293b168bcc15a552f4383175e2f2f LICENSE
 SHA1 4210091bd405fcb6099d8d056e7c2694d641a591 MANIFEST
-SHA1 fc9475fce03d2ad64c876040076cd6fe6eca2d83 META.json
-SHA1 0fb60e034c4852c4d18568cdeb77d9a8addb408e META.yml
-SHA1 55e81c493843936af8bdd6f8390b16e70052ec4a README
-SHA1 9425b63ba6cd7cb91142c2a97990a15f8058fde9 lib/File/DataClass.pm
+SHA1 eced6f4abce40e27f667f2fb0430a87b5dfd13b5 META.json
+SHA1 840197a0ef0c280ded9413661d3e528884d61108 META.yml
+SHA1 cc589e2db8fea050c6778d40e05694577e7a9076 README
+SHA1 f4419743709ce2e6e1a56f605cbab76e89b66359 lib/File/DataClass.pm
 SHA1 0a527e8cf87ac6260e885865f0d1676635af4aea lib/File/DataClass/Cache.pm
 SHA1 6261b5112504a2b386dc666e6c9d380825f1d485 lib/File/DataClass/Constants.pm
 SHA1 7018f6a179cf4d91103795b8d2f07a3b6bcd706a lib/File/DataClass/Exception.pm
@@ -46,7 +46,7 @@ SHA1 507f6c28a0008f63b41ffda26faccd0aec193d68 t/07podspelling.t
 SHA1 392c570266dcede0d55a188d03226f8272419f1c t/10exception.t
 SHA1 3dfd35f3f5610fe572756205402c5f7c05613cac t/12types.t
 SHA1 89842057a273a414ab90430158831a3adf651d3f t/13functions.t
-SHA1 6f999828d7e5dd198d708bd68d24a0ccfe6320d7 t/15io.t
+SHA1 ccf1698b6e9a015f065e8a4ade6b72e8741544b8 t/15io.t
 SHA1 dd761695a1cab9d13223fb55d047c9bd805c0d58 t/17constraints.t
 SHA1 f02cf9c62dfb16d7b889297f2605ed66a638315b t/20data-class.t
 SHA1 78d207520e7f00094a99976ff6b0b323a34a502b t/21hash-merge.t
@@ -63,11 +63,11 @@ SHA1 c0908aadd4d891db9a460dace4f012b6e8a36eff t/other.json
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.10 (GNU/Linux)
 
-iQEcBAEBAgAGBQJTtebKAAoJEK492j4Im1Bpqj4IAMPq7qC9VUtHvRV9g4ERCFWM
-dhoRw2qFkZ0APY1mbC7wdcg9jd/VU56LfFmUpUusejCHiYiJ4sH9f/KmC9F/xRRk
-nZWsib9Ti9yP8Waj2anFoSlu2K3WAmNlIGt1EtWvH2E3GGPD0Vr+ZiBGkGQDwdKR
-3oHc8H+MMZfOJzWaFZClaYGD94SjH9ReJsa5n+XXZX6bDAOAnP1DpYxf7IcxL/zv
-LK32N9Q8uyx1oTNDJgKUI3cHNSaDiX7yHwGwzl6tICCaonUsjkuEcRwNL4ynallR
-7qO3B3KAHVdpJaJUNfzokWyUfwWUU/nFAhEqGlNPcGFBveuMqBBtIKpXQQABKOU=
-=rdn8
+iQEcBAEBAgAGBQJTtnKwAAoJEK492j4Im1BpqPkH/i7SbnkA1f4EQ/txVB5HCAt4
+aaNdO8UcZ6imKd7xZ7EWu4dAIN7jzKQQVAiSqJcpl0tnstis5ktc4tDyHyZNKg09
+4NxiXV6LVGJIW/PnPV1GJTzBFbK8BTtcvjLc3i4fSwG1E1B7WWjAbrIky+pAN1FD
+rLs3xDylGTPd26DnsIlG3PlI8zh0DZdcc7L0syHBeHFIu1CyBThMEt+62bOzWRHv
+ioamgt27ZyWmf6T9rw1BzLa2SVwkd+Jjw0Z+HNHhQvgbIM35wY3hVg4fnZRLQEty
+Ya1XQV/RHiH4/rTLXKivNb6mRiEOJSei5sCXR0Hl73fFgsYcEk6HQ+mmr6uKObo=
+=OPud
 -----END PGP SIGNATURE-----
